# MSHV

./: .gitignore  MSHV_ARM_PI.pro  MSHV_FreeBSD_amd64.pro  MSHV_I686.pro  MSHV_Slarm64_PI.pro  MSHV_WIN32.pro  MSHV_WIN64.pro  MSHV_armv7l.pro  MSHV_x86_64.pro  README.md  README_HOW_TO_COMPILE.txt  crc_patch.diff
src/: config.h  config_band_all.h  config_str_all.h  config_str_con.h  config_str_sk.h  main.cpp  main_ms.cpp  main_ms.h  ms_ico_win.rc  png_writing_remove_script_for_all_dir_win.txt
src/CpuWidget/: cpusensorhv.cpp  cpusensorhv.h  cpuwudget.cpp  cpuwudget.h
src/CpuWidget/HvProgBarSlowH/: hvprogbarslowh.cpp  hvprogbarslowh.qrc
src/DisplayMs/: display_ms.cpp  display_ms.h
src/HvAboutMsHv/: hvaboutmshv.cpp
src/HvAlsaMixer/: hvmixermain.h
src/HvButtons/: hvbutton_left4.cpp
src/HvDecodeList/: decodelist.cpp  decodelist.h  hvcty.cpp
src/HvDecoderMs/: decoderft4.cpp  decoderft8.cpp  decoderjt65.cpp  decoderms.cpp  decoderms.h  decodermsk144.cpp  decodermsk40.cpp  decoderpom.cpp  decoderpom.h  decoderq65.cpp  decoderq65.h  ft_all_ap_def.h
src/HvMsCore/: mscore.cpp  mscore.h
src/HvMsPlayer/: msplayerhv.cpp  msplayerhv.h
src/HvMsPlayer/libsound/: genmesage.cpp  genmesage_ms.cpp  genpom.cpp  mpegsound.h  rawplayer.cpp  wavetoraw.cpp
src/HvMsPlayer/libsound/HvGen65/: gen65.cpp
src/HvMsPlayer/libsound/HvGenFt4/: gen_ft4.cpp  gen_ft4.h
src/HvMsPlayer/libsound/HvGenFt8/: gen_ft8.cpp  gen_ft8.h
src/HvMsPlayer/libsound/HvGenMsk/: genmesage_msk.cpp
src/HvMsPlayer/libsound/HvGenQ65/: gen_q65.cpp
src/HvMsPlayer/libsound/HvPackUnpackMsg/: pack_unpack_msg.h  pack_unpack_msg77.cpp  pack_unpack_msg77.h
src/HvRigControl/: hvrigcontrol.cpp  hvrigcontrol.h
src/HvRigControl/HvRigCat/: hvrigcatw.cpp  hvrigcatw.h  hvutils.cpp  hvutils.h
src/HvRigControl/HvRigCat/icom/: icom.cpp  icom_def.h
src/HvRigControl/HvRigCat/kenwood/: kenwood.cpp  kenwood_def.h
src/HvRigControl/HvRigCat/network/: network.cpp  network.h  network_def.h
src/HvRigControl/HvRigCat/omnirig/: omnirig.cpp  omnirig.h  omnirighv.cpp
src/HvRigControl/HvRigCat/sdrs/: sdrs.cpp  sdrs_def.h
src/HvRigControl/HvRigCat/yaesu/: yaesu.cpp  yaesu.h  yaesu_def.h
src/HvStylePlastique/: hvfontdialog.cpp
src/HvTranslations/: mshv_bg.qm  mshv_bg.ts  mshv_caes.qm  mshv_caes.ts  mshv_cscz.qm  mshv_cscz.ts  mshv_dadk.qm  mshv_dadk.ts  mshv_eses.qm  mshv_eses.ts  mshv_frfr.qm  mshv_frfr.ts  mshv_itit.qm  mshv_itit.ts  mshv_nbno.qm  mshv_nbno.ts  mshv_plpl.qm  mshv_plpl.ts  mshv_ptbr.qm  mshv_ptbr.ts  mshv_ptpt.qm  mshv_ptpt.ts  mshv_roro.qm  mshv_roro.ts  mshv_ru.qm  mshv_ru.ts  mshv_zh.qm  mshv_zh.ts  mshv_zhhk.qm  mshv_zhhk.ts
src/HvTxW/: hvinle.cpp  hvmultianswermodw.cpp  hvmultianswermodw.h  hvspinbox.cpp  hvspinbox.h  hvtxw.cpp  hvtxw.h
src/HvTxW/HvLogW/: config_prop_all.h  hvlogw.cpp  hvlogw.h
src/HvTxW/HvMakros/: hvmakros.cpp
src/HvTxW/HvRadioNetW/: MessageClient.cpp  MessageClient.h  NetworkMessage.h  pskreporterudptcp.cpp  pskreporterudptcp.h  radionetw.cpp  radionetw.h
src/Hv_Lib_fftw/: fftw-3_How_to.txt
src/SettingsMs/: settings_ms.cpp
wasm/: .gitignore  CMakeLists.txt  build.sh  httpserver.py  mshv_ft8.wasm  readme.md  run_tests.sh
wasm/src/: QString.h  packwrap.c
wasm/src/mshv_adapted/: hvqthloc.cpp  hvqthloc.h  pack_msg.cpp  pack_unpack_msg.h  pack_unpack_msg77.cpp  pack_unpack_msg77.h  unpack_msg.cpp
wasm/src/qtext_simple/: QChar.cpp  QChar.h  QString.cpp  QString.h
wasm/src/tests/: pack_unpack_msg77_tests.cpp  qstring_tests.cpp
wasm/src/wasm_specific/: QChar.cpp  QChar.h  QString.cpp  QString.h  QStringList.cpp  QStringList.h  packwrap.cpp  putil.h
wasm/web/: hshv_ft8.js  mshv_ft8.js  mshv_ft8.wasm  test-safe.html  test.html
